[package]
name = "zellinotes-recipe-service-rust"
version = "0.1.0"
authors = ["julian <ju851zel@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
mongodb = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.5"
bson = "1.1.0"
